k8s/redis.dep.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: redis
  namespace: rcc-manager
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      hostname: redis
      containers:
      - name: redis
        image: registry.k8s.io/redis:e2e  
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
