k8s/sql-server.dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deploy
  namespace: rcc-manager
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mssql-app
  template:
    metadata:
      labels:
        app: mssql-app
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2017-latest
        ports:
        - containerPort: 1433
        securityContext:
          privileged: true
        volumeMounts:
        - name: mssql-mount
          mountPath: /var/opt/mssql
      volumes:
      - name: mssql-mount
        persistentVolumeClaim:
          claimName: mssql-data
