k8s/rcc-manager.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rcc-manager-service
  namespace: rcc-manager
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: rcc-manager-api
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
