k8s/redis.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: rcc-manager
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
