k8s/sql-server.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
spec:
  selector:
    app: mssql-app
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
